1.9/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shared-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-service # /pingpong
                port:
                  number: 3032
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-output-service # / from log-output app
                port:
                  number: 3011
